# astrbot_plugin_webhook_notifier

./: .gitignore  CHANGELOG.md  LICENSE  README.md  _conf_schema.json  main.py  metadata.yaml  pyproject.toml  requirements.txt
.astrbot-plugin/i18n/: en-US.json  zh-CN.json
core/: display.py  help_card.py  models.py  notification_policy.py  omp.py  opencode.py  providers.py  rebind.py  registry.py  renderer.py  security.py  sender.py  server.py  template_registry.py
docs/: FSD.md  PRD.md  client-integration.md  command-reference.md  end-to-end-setup.md  monaco-plugin-page-phase0.md  opencode-integration.md  platform-delivery-policy.md  platform-id-rebind-runbook.md  public-contract.md  release.md  security-and-operations.md  t2i-rendering-notes.md  template-variables.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
scripts/: package_plugin.py  rebind_platform_id.py  smoke_opencode_plugin.py
templates/: help_card.html
tests/: conftest.py  test_command_security.py  test_frontend_build.py  test_help_card.py  test_issue1_delete.py  test_main.py  test_notification_policy.py  test_notification_scope_contract.py  test_omp.py  test_opencode.py  test_opencode_client_plugin_boundary.py  test_package_plugin.py  test_phase2_multiplatform.py  test_phase3_concurrency.py  test_provider_commands.py  test_providers.py  test_rebind.py  test_registry.py  test_renderer.py  test_security.py  test_sender.py  test_sensitive_delivery.py  test_server.py  test_smoke_opencode_plugin.py  test_template_registry.py  test_version_consistency.py  test_wake_prefix.py
(+22 files in other folders)
