[project]
name = "astrbot-plugin-webhook-notifier"
version = "0.2.0"
description = "AstrBot Webhook Notifier plugin"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["aiohttp>=3.9.0", "Jinja2>=3.1.0"]

[dependency-groups]
dev = [
    "pyyaml>=6.0.2",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pillow>=12.3.0",
]
